# GraphWaveletEncoder

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
src/graph_wavelet_encoder/: __init__.py  encoder.py
tests/: test_encoder.py
