[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graph-wavelet-encoder"
version = "0.1.0"
description = "Graph wavelet scattering transform encoder for PyTorch Geometric"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
authors = [
    { name = "Chen Liu", email = "chen.liu.cl2482@yale.edu" }
]
keywords = ["graph", "wavelet", "scattering", "torch-geometric", "neural-network"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
    "torch>=1.9",
    "torch-geometric>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/your-username/graph-wavelet-encoder"
Repository = "https://github.com/your-username/graph-wavelet-encoder"
Documentation = "https://github.com/your-username/graph-wavelet-encoder#readme"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
